fixes missing brace and aligns landing page image

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -196,11 +196,10 @@ header {
     height: 25vh;
   }
 }
-
 header .logo-img {
   max-width: 70%;
   margin-left: 30px;
-
+}
 header #profile-image {
   display: flex;
 }
@@ -297,26 +296,23 @@ header nav {
     min-width: unset;
   }
 }
-
 header nav .sign-up-btn {
   color: black;
   width: 100px;
   height: 35px;
   border: 1px solid rgba(193, 58, 67, 0.9);
   border-radius: 19px;
-
   padding: 1%;
   background-color: #FAFAFA;
   outline: none;
   font-size: 1.4rem;
   letter-spacing: 1px;
 }
-
 header nav .sign-up-btn:hover {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   border-radius: 19px;
   cursor: pointer;
-
+}
 @media (min-width: 651px) and (max-width: 800px) {
   header nav .sign-up-btn {
     width: 100%;
@@ -657,10 +653,75 @@ footer h4 {
 .landing-page .content-div .bottom-content .text button:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-.landing-page .content-div .bottom-content .img img {
-  width: 100%;
+.landing-page .img-div {
+  position: absolute;
+  right: 0;
+  bottom: -2px;
 }
-  
+@media screen and (min-width: 0px) and (max-width: 995px) {
+  .landing-page .img-div {
+    display: none;
+  }
+}
+.button-div {
+  display: flex;
+  width: 30%;
+  align-items: center;
+  justify-content: flex-start;
+}
+@media (min-width: 651px) and (max-width: 800px) {
+  .button-div {
+    width: 100%;
+    height: 15vh;
+    padding-top: 4%;
+  }
+}
+@media (max-width: 650px) {
+  .button-div {
+    width: 100%;
+    height: 15vh;
+    padding-top: 4%;
+  }
+}
+.button-div button {
+  width: 100%;
+  text-decoration: none;
+  font-size: 2.5em;
+  color: #EC3944;
+  border: 1px solid #EC3944;
+  border-radius: 3px;
+  padding: 5px 30px;
+  margin-left: 20%;
+  margin-top: 5vh;
+  cursor: pointer;
+}
+.button-div button:hover {
+  background: #EC3944;
+  border-radius: 5px;
+  color: #ffffff;
+}
+@media (min-width: 651px) and (max-width: 800px) {
+  .button-div button {
+    height: 100%;
+  }
+}
+@media (max-width: 650px) {
+  .button-div button {
+    height: 100%;
+  }
+}
+@media (min-width: 651px) and (max-width: 800px) {
+  .button-div button a {
+    height: 35%;
+    width: 60%;
+  }
+}
+@media (max-width: 650px) {
+  .button-div button a {
+    height: 35%;
+    width: 60%;
+  }
+}
 .empty-jobs {
   width: 100%;
   height: 100vh;
@@ -1502,13 +1563,6 @@ button {
   background-image: linear-gradient(140deg, #c13a43, rgba(193, 58, 67, 0.9), rgba(193, 58, 67, 0.1));
   display: flex;
   align-items: center;
-
-  background: #FAFAFA;
-}
-@media (max-width: 350px) {
-  .main-div {
-    align-items: flex-start;
-  }
 }
 .login-page .form-wrap {
   width: 50%;
@@ -1888,63 +1942,11 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  background: #FAFAFA;
-}
-@media (max-width: 350px) {
-  .main-div2 {
-    align-items: flex-start;
-  }
-}
-@media (max-width: 650px) {
-  .main-div2 {
-    align-items: flex-start;
-  }
 }
 .register-page form {
   width: 40%;
   display: flex;
   flex-direction: column;
-
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-@media (max-width: 350px) {
-  .main-div2 .second-main2 {
-    margin-top: 20%;
-  }
-}
-@media (max-width: 650px) {
-  .main-div2 .second-main2 {
-    margin-top: 20%;
-  }
-}
-.main-div2 .second-main2 button {
-  width: 10vw;
-  height: 48px;
-  background: #EC3944;
-  color: #fff;
-  font-size: 2em;
-  border: none;
-  border-radius: 8px;
-  margin-top: 5%;
-  right: 0;
-}
-@media (max-width: 350px) {
-  .main-div2 .second-main2 button {
-    width: 20rem;
-  }
-}
-@media (max-width: 650px) {
-  .main-div2 .second-main2 button {
-    width: 20rem;
-  }
-}
-.main-div2 .second-main2 button:hover {
-  background: #fff;
-  color: #EC3944;
-  border: 2px solid #EC3944;
 }
 .register-page form .form-inputs {
   display: flex;
