--- a/src/less/ComponentStyles/LandingPage.less
+++ b/src/less/ComponentStyles/LandingPage.less
@@ -1,4 +1,3 @@
-
 .landing-page {
   width: 100%;
   height: calc(100vh - 75px);
@@ -43,12 +42,15 @@
           box-shadow: 0 0 10px rgba(0,0,0,.2);
         }
       }
+    }
+  }
+  .img-div {
+    position: absolute;
+    right: 0;
+    bottom: -2px;
 
-      .img {
-        img {
-          width: 100%;
-        }
-      }
+    @media screen and (min-width: 0px) and (max-width: 995px) {
+      display: none;
     }
   }
 }
